--- a/src/router/App.css
+++ b/src/router/App.css
@@ -11,9 +11,21 @@
   animation: load8 1.1s infinite linear;
 }
 
-
-
-  
+.background-img
+{
+    text-align: center;
+   background: url("../assets/background.jpg");
+   background-size: cover;
+   z-index: -1000;
+}
+.webpage{
+  text-align:center;
+}
+#webpage-header{
+  z-index: 1;
+  border:solid;
+  border-color: red;
+}
   .App {
     text-align: center;
     position: relative;
@@ -23,14 +35,8 @@
 .footer{
   position:relative;
 }
-  .home
-  {
-      text-align: center;
-     background: url("./../assets/laptop.mp4");
-     background-size: stretch;
-     
-   
-  }
+
+  
   .black{
     background-color: #000000;
     opacity: 0.8;
